Made the navbar work

--- a/index.html
+++ b/index.html
@@ -54,10 +54,17 @@
         padding: 0;
     }
     .left_nav{
-        float: left;
+        position:absolute;
+        left:0;
+        top:0;
+        bottom:0;
     }
     .right_nav{
-        float: right;
+        position:absolute;
+        top:0;
+        right:0;
+        top:0;
+        bottom:0;
     }
     .buttons{
         display: flex;
