Finished Practice Website

--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
         position:absolute;
         top:0;
         right:0;
-        top:0;
         bottom:0;
     }
     .buttons{
@@ -72,6 +71,21 @@
     }
     .outer-margin{
         margin-top: 200px;
+    }
+    .bottom-footer{
+        display:inline;
+        margin:0;
+        padding: 0;
+    }
+    .left-footer{
+        position:absolute;
+        left:0;
+        bottom:0;
+    }
+    .right-footer{
+        position:absolute;
+        bottom:0;
+        right:0;
     }
 </style>
 <html>
@@ -103,6 +117,18 @@
             <div class="buttons">
                 <button type="submit">Google Search</button>
                 <button type="submit">I'm Feeling Lucky</button>
+            </div>
+        </div>
+        <div class="bottom-footer">
+            <div class="left-footer">
+                <button>Advertising</button>
+                <button>Business</button>
+                <button>How Search works</button>
+            </div>
+            <div class="right-footer">
+                <button>Privacy</button>
+                <button>Terms</button>
+                <button>Settings</button>
             </div>
         </div>
     </body>
